# explainable_document_QA_assistant

./: .gitignore  README.md  data_processing.py  evaluation.py  pyproject.toml  requirements.txt  retrieval_augmented_QA.py  utils.py
configs/: config.yaml  config_data_processing.yaml  config_eval.yaml
src/: evaluation.py  retrieval_augmented_QA.py
